--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -29,6 +29,7 @@
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=Totes">Totes</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/display-blend-tote-label">Blend Tote Label</a></li>
+        <li><a class="dropdown-item" href="/core/display-flush-tote-label">Flush Tote Label</a></li>
         <li><a class="dropdown-item" href="/core/display-partial-container-label">Container Label (Inventory)</a></li>
 
     </ul>
