--- a/app/core/templates/core/tanklevels.html
+++ b/app/core/templates/core/tanklevels.html
@@ -19,6 +19,10 @@
         <h1>Tank Levels</h1>
     </div>
 
+    <div class="mb-4">
+        <a href="{% url 'tank-level-change-report' %}" class="btn btn-primary">View Tank Level Change Report</a>
+    </div>
+
     <div class="table-responsive-sm">
         <table id="tankLevelTable" class="table text-left table-bordered">
             <thead class="thead-dark sticky-sm-top sticky-md-top sticky-lg-top">
